# native-land

./: .deepsource.toml  .gitignore  .travis.yml  AGENTS.md  Cargo.toml  LICENSE  README.md  audit.toml  codecov.yml  config.yml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: cpp.yml  main.yml  nb.yml  runpod-monit.yml  windows-ci.yml  zig.yml
.github/workflows/runpod/: monit.yml
archived/: .travis.yml
archived/rsgpu-xp/: build.rs
archived/rsgpu-xp/shaders/: rust-toolchain.toml
archived/rust_cpp/: Cargo.toml  build.rs
archived/rust_cpp/src/: lib.rs
archived/rustry/: Cargo.toml
archived/rustry/examples/: future_input.rs  quicli.rs
archived/sky-xp/: README.md  hello.sky.yml  justfile
backlog/: config.yml
examples/: future.rs  future_input.rs  future_timeout.rs
examples/lists/tests/: test_list01.rs
examples/rust_basics/: Cargo.toml
examples/rust_basics/examples/: stdin.rs
exercises/lists/: Cargo.toml
exercises/lists/src/: lib.rs  list01.rs  list02.rs
exercises/lists/tests/: test_list02.rs
exercises/rust_basics/tests/: compile_failure_test.rs  fibonacci_test.rs  hello_world_test.rs  stdin_test.rs
for-llm/: repo.md
lists/src/: lib.rs
lists/tests/: test_list02.rs
livebooks/: bumblebee.livemd  nx.livemd
notebooks/: hello_evcxr.ipynb  justfile
notebooks/.ipynb_checkpoints/: hello_evcxr-checkpoint.ipynb
playground/: justfile
playground/cubecl-test/: Cargo.toml
playground/cubecl-test/examples/: gelu.rs
playground/cubecl-test/src/: lib.rs  main.rs
playground/cubecl-test/tests/: test_gelu.rs
playground/cubecl-xp/tests/: test_gelu.rs
playground/dx-test/: Cargo.toml  Dioxus.toml
playground/dx-test/tests/: hello_test.rs
playground/dx-xp/: Cargo.toml  Dioxus.toml
rust_basics/: Cargo.toml
rust_basics/src/: fibonacci.rs  lib.rs  run_cxx.rs
rust_basics/tests/: compile_failure_test.rs  run_cxx_test.rs  utils.rs
rustry/: Cargo.toml
rustry/examples/: future.rs  future_input.rs  future_timeout.rs  quicli.rs
rustry/src/: main.rs
src/: lib.rs  main.rs
yard-cpp/: justfile
yard-cpp/root-xp/: justfile  xmake.lua
yard-cpp/root-xp/src/: main.cpp
yard-cpp/sga-xp/: .clangd.in  xmake.lua
yard-cpp/sga-xp/src/: main.cpp
yard-cpp/xmake-xp/: justfile  xmake.lua
yard-cpp/xmake-xp/src/: main.cpp
yard-rs/: .env  README.md  dev.dstack.yml  hello.sky.yml  justfile  task.dstack.yml
yard-rs/bevy-xp/: Cargo.toml  README.md  rust-toolchain.toml
yard-rs/bevy-xp/assets/shaders/: first_pass.wgsl  second_pass.wgsl
yard-rs/bevy-xp/src/: main.rs
yard-rs/bevy-xp/tests/: compute_test.rs
yard-rs/candle-xp/: Cargo.toml
yard-rs/candle-xp/src/: main.rs
yard-rs/candle-xp/tests/: linear_tests.rs  model_tests.rs  tensor_tests.rs
yard-rs/clifford-xp/: Cargo.toml  README.md
yard-rs/clifford-xp/src/: main.rs
yard-rs/clifford-xp/tests/: main_test.rs
yard-rs/cubecl-xp/: Cargo.toml  README.md
yard-rs/cubecl-xp/examples/: gelu.rs
yard-rs/cubecl-xp/src/: lib.rs
yard-rs/cubecl-xp/tests/: test_gelu.rs
yard-rs/cubecl-xp/tests/fixtures/: gelu.wgsl
yard-rs/dx-xp/: Cargo.toml
yard-rs/dx-xp/src/: lib.rs  main.rs
yard-rs/dx-xp/tests/: hello_test.rs
yard-rs/krnl-xp/: Cargo.toml  build.rs  krnl-cache.rs  rust-toolchain.toml
yard-rs/krnl-xp/src/: lib.rs  main.rs
yard-rs/krnl-xp/tests/: test_saxpy.rs
yard-rs/lists/: Cargo.toml  README.md
yard-rs/lists/src/: list01.rs  list02.rs
yard-rs/lists/tests/: test_list01.rs
yard-rs/rsgpu-runner-xp/: Cargo.toml  rust-toolchain.toml
yard-rs/rsgpu-runner-xp/builder/: Cargo.toml
yard-rs/rsgpu-runner-xp/builder/src/: main.rs
yard-rs/rsgpu-runner-xp/rsgpu-shaders/: Cargo.toml
yard-rs/rsgpu-shaders/: Cargo.toml
yard-rs/rsgpu-shaders/src/: lib.rs
yard-rs/rsgpu-xp/: Cargo.toml  build.rs
yard-rs/rsgpu-xp/builder/: Cargo.toml  build.rs
yard-rs/rsgpu-xp/builder/src/: main.rs
yard-rs/rsgpu-xp/shaders/: Cargo.toml
yard-rs/rsgpu-xp/shaders/src/: lib.rs
yard-rs/rsgpu-xp/src/: compute.rs  lib.rs  main.rs
yard-rs/rsgpu-xp/tests/: test_compute.rs
yard-rs/runpod-xp/: common.py  gpus.json  justfile  kill.py  monit-runpod.py  monit.py  pyproject.toml  requirements-runpod.txt  run.py
yard-rs/runpod-xp/scripts/: rust.sh
yard-rs/runpod-xp/tasks/: demo.yml
yard-rs/rust_basics/: Cargo.toml
yard-rs/rust_basics/examples/: stdin.rs
yard-rs/rust_basics/tests/: fibonacci_test.rs  stdin_test.rs  utils.rs
yard-rs/rust_cpp/: Cargo.toml  build.rs  justfile
yard-rs/rust_cpp/src/: lib.rs  run_cpp.rs  run_cxx.rs  run_gal.rs  run_sga.rs
yard-rs/rust_cpp/tests/: run_cpp_test.rs  run_cxx_test.rs  run_gal_test.rs
yard-rs/rustry/: Cargo.toml
yard-rs/rustry/examples/: future.rs  future_input.rs  quicli.rs
yard-rs/rustry/src/: main.rs
yard-rs/rustry/tests/: main_test.rs
yard-rs/tch-xp/: Cargo.toml  environment.yml
yard-rs/tch-xp/.cargo/: config.toml
yard-rs/tch-xp/tests/: basic_tensor_ops.rs
yard-zig/: README.md  justfile
yard-zig/aio-xp/: README.md  build.zig  build.zig.zon
yard-zig/aio-xp/src/: main.zig
yard-zig/basic-xp/: build.zig  build.zig.zon  mise.toml  test_runner.zig
yard-zig/basic-xp/src/: alloc.zig  array.zig  comptime.zig  control.zig  float_precision.zig  main.zig  pointer.zig  root.zig  rt_safety.zig  safety.zig  simd.zig  string_literals.zig
yard-zig/ourio-xp/: build.zig  build.zig.zon
yard-zig/ourio-xp/src/: main.zig
yard-zig/xev-xp/: README.md  build.zig  build.zig.zon
yard-zig/xev-xp/src/: main.zig
