[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

# run a member with `cargo run -p member`
members = [
    "yard-rs/*",
]

exclude = [
    "archived/*"
]

[workspace.package]
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"

[profile.dev]
debug = 0     # Speed up compilation time and not necessary.
opt-level = 2