[workspace]
[package]
name = "rustry"
version = "0.0.1"
authors = ["utensil <utensilcandel@gmail.com>"]

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1.23"
bytes = "0.4"
libloading = "0.5"
libc = "0.2"
rand = "0.3"
quick-error = "1.2.1"
serde = "1.0.55"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
quicli = "0.2"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.4", features = ["winuser", "shellapi"] }
systray = "0.3.0"