[package]
name = "cubecl-test"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []
wgpu = ["cubecl/wgpu"]

[dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl", features = ["wgpu"] }
half = { version = "2.4.1", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
pretty_assertions = "1.4.1"
