[package]
name = "dx-xp"
version = "0.1.0"
authors = ["utensil <utensilcandel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
dioxus-ssr = "0.5.6"
futures = "0.3.30"
pretty_assertions = "1.4.1"
