[package]
name = "bevy-xp"
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_easy_compute = { git = "https://github.com/AnthonyTornetta/bevy_easy_compute", rev = "bbaa8b83472e96e035008bb06c88333023f63503" }

# Following https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 1

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies.bevy]
version = "0.14.2"
default-features = false
# See https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md
features = [
  "bevy_core_pipeline",
  "multi_threaded",
  "x11",
]
