[package]
name = "bevy-xp"
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_easy_compute = { git = "https://github.com/AnthonyTornetta/bevy_easy_compute", rev = "bbaa8b83472e96e035008bb06c88333023f63503" }

[dependencies.bevy]
version = "0.14.2"
default-features = false
# See https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md
features = [
  "bevy_core_pipeline",
  "multi_threaded",
  "x11",
]
