[package]
name = "candle-xp"
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"

# Following https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 1

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies]
anyhow = "1.0.89"
# https://huggingface.github.io/candle/guide/installation.html
# rev fixed to 0.8.4
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "468d1d525fe206a35d6962c02cfa7b9918b31076" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "468d1d525fe206a35d6962c02cfa7b9918b31076" } 
# https://huggingface.github.io/candle/inference/hub.html
hf-hub = { version = "0.3.2", features = ["tokio"] }
memmap2 = "0.9.5"
tokio = "1.40.0"
