[package]
name = "candle-xp"
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"

[dependencies]
anyhow = "1.0.89"
# https://huggingface.github.io/candle/guide/installation.html
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "2e5dbc78" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "2e5dbc78" } 
# https://huggingface.github.io/candle/inference/hub.html
hf-hub = { version = "0.3.2", features = ["tokio"] }
memmap2 = "0.9.5"
tokio = "1.40.0"
