[package]
name = "cubecl-xp"
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"

[features]
default = ["wgpu"]
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]

[dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "1156d3e61c0b6ee30685f059323abd5f170bf8c7"} # , features = ["wgpu"] }
half = { version = "2.4.1", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
pretty_assertions = "1.4.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
