# this project is adapted from
# - https://github.com/GraphiteEditor/Graphite/tree/master/node-graph/gpu-compiler
# - https://github.com/Rust-GPU/rust-gpu/blob/main/examples/runners/wgpu/build.rs
[package]
name = "rsgpu-xp"
edition = "2021"
version = "0.1.0"

[dependencies]
wgpu = { version = "22.1", features = ["spirv", "vulkan-portability"] }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }