[package]
name = "rustry"
authors = ["utensil <utensilcandel@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
version = "0.0.1"


# Following https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 1

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1.23"
bytes = "0.4"
libloading = "0.5"
libc = "0.2"
rand = "0.3"
quick-error = "1.2.1"
serde = "1.0.55"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.4"
quicli = "0.2"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.4", features = ["winuser", "shellapi"] }
systray = "0.3.0"
