[workspace]

[package]
name = "example-runner-wgpu-builder"
version = "0.1.0"
publish = false

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-installed-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
bumpalo = "3.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
spirv = "0.3"
spirv-std = { git = "https://github.com/GraphiteEditor/rust-gpu.git", rev = "7f60fbbdddc0d6effa1c3c86e3e11f9896c970e8" }
glam = { version = "0.28", default-features = false, features = ["serde"] }
spirv-builder = { version = "0.9", default-features = false, features = [
	"use-installed-tools",
] }
