[workspace]

resolver = "2"

[package]
name = "builder"
version = "0.1.0"
edition = "2021"
publish = false

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
# bumpalo = "3.14"
# serde = { version = "1.0", features = ["derive", "rc"] }
# serde_json = "1.0"
# serde-wasm-bindgen = "0.6"
# spirv = "0.3"
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "d2eb777510bae92c33eabe29567a61e3617088ba" }
glam = { version = "0.28", default-features = false, features = ["serde"] }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "d2eb777510bae92c33eabe29567a61e3617088ba"}
#, default-features = false, features = [
# 	"use-installed-tools",
# ] }
