[workspace]

resolver = "2"

[package]
name = "shaders"
version = "0.1.0"
publish = false

[lib]
crate-type = ["dylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[dependencies]
# serde = { version = "1.0", features = ["derive", "rc"] }
# serde_json = "1.0"
# serde-wasm-bindgen = "0.6"
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "d2eb777510bae92c33eabe29567a61e3617088ba" }
num-traits = { version = "0.2.15", default-features = false }
glam = { version = "0.28", default-features = false }
# bytemuck = { version = "1.6.3", features = ["derive"] }
# using this rev until https://github.com/Rust-GPU/rust-gpu/issues/29 is fixed
# spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "54f6978c25b7e168ded04e720b996625b3654ebd" }
# following deps before https://github.com/GraphiteEditor/Graphite/commit/fa1535d0bb2a7124a773b9b8eb62686820519299
# glam = { version = "0.25", default-features = false, features = ["serde"] }
